# zeek-cli

./: Cargo.toml  README.md
src/: main.rs
src/commands/: gas.rs  mod.rs  proofs.rs
src/rpc/: gas.rs  mod.rs  proofs.rs
src/utils/: mod.rs  proof_verification.rs  visualizer.rs
