[package]
name = "zeek"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.18", features = ["derive"] }
reqwest = { version = "0.12.7", features = ["json", "gzip", "brotli"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
blake2 = "0.10.6"
hex = "0.4.3"
anyhow = "1.0.89"
colored = "2.1.0"
